# dqm-lib-smartwatch

dqm/: README.md  pyproject.toml
dqm/src/dqm/: __init__.py
