[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqm"
version = "0.0.3"
authors = [
  { name="Shehjar Sadhu", email="shehjar_sadhu@uri.edu" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wearablebiosensing/mindgame-study-data-analysis.git"
Issues = "https://github.com/wearablebiosensing/mindgame-study-data-analysis/issues"